
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="#FF4081">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

    <TextView
        android:id="@+id/time_date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textStyle="bold"
        android:textColor="@color/blue_text"
        android:background="@drawable/timedate_text_bg"
        android:gravity="center"
        android:text="Time" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            android:layout_marginBottom="-20dp"
            android:background="@drawable/day_box_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/day_text_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_text"
                    android:text="@string/my_space"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/today_i_will_study_maths"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/txtMonday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:background="@drawable/circle_bg"
                            android:text="@string/m"/>

                        <TextView
                            android:id="@+id/dotMonday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/blue_text"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/txtTuesday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:background="@drawable/circle_bg"
                            android:text="T"/>

                        <TextView
                            android:id="@+id/dotTuesday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/blue_text"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/txtWednesday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:background="@drawable/circle_bg"
                            android:text="W"/>

                        <TextView
                            android:id="@+id/dotWednesday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/blue_text"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/txtThursday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:background="@drawable/circle_bg"
                            android:text="Th"/>

                        <TextView
                            android:id="@+id/dotThursday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/blue_text"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/txtFriday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:background="@drawable/circle_bg"
                            android:text="F"/>

                        <TextView
                            android:id="@+id/dotFriday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/blue_text"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/txtSaturday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:background="@drawable/circle_bg"
                            android:text="Sa"/>

                        <TextView
                            android:id="@+id/dotSaturday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/blue_text"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/txtSunday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:background="@drawable/circle_bg"
                            android:text="Su"/>

                        <TextView
                            android:id="@+id/dotSunday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/blue_text"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/txtQuote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/don_t_limit_your_challenges_nchallenge_your_limits"/>

        </LinearLayout>


        <Button
            android:id="@+id/btnEnter"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:text="@string/enter" />


    </LinearLayout>

</FrameLayout>
